# kickshort

./: Cargo.toml  Procfile  README.md
.github/workflows/: rust.yml
migrations/2022-08-28-225354_create_links/: up.sql
migrations/2022-10-05-203858_add_visiblity_and_visitors_to_links/: down.sql  up.sql
migrations/2022-10-05-213147_remove_expires_at_from_links/: down.sql  up.sql
migrations/2022-10-06-180615_add_unique_index_to_hash_on_links/: down.sql  up.sql
migrations/2022-10-26-213514_add_title_to_links/: down.sql  up.sql
public/: application.css
src/: api.rs  cors.rs  link.rs  main.rs  paginate.rs  tests.rs
static/: 404.html
templates/: 404.html.hbs  500.html.hbs  error_layout.html.hbs
