[package]
name = "url_shorten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
chrono = { version = "0.4.22", features = ["serde"] }
serde = "1.0.144"
diesel_migrations = { version = "1.4.0", features = ["postgres"] }
base32 = "0.4.0"
map-macro = "0.2.4"
url = "2.2.2"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
